create footer component

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,12 +16,15 @@
 
   &__buttons {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-bottom: 2rem;
   }
 
   &__button {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 0.5rem;
     border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
   }
 }
