work on services section

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -21,9 +21,9 @@
   }
 
   &__button {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Roboto", Tahoma, sans-serif;
     padding: 0.5rem;
-    border: none;
+    border: solid 2px black;
     border-radius: 0.5rem;
     cursor: pointer;
   }
