--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,8 @@
   background-color: #e8e6e6;
   display: flex;
   flex-direction: column;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
+  padding-bottom: 2rem;
 
   &__content {
     display: flex;
