--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -1,11 +1,12 @@
 * {
   box-sizing: border-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
 }
 
 .homepage {
   &__hero-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: url("../../assets/images/mock_photo1.webp");
@@ -15,17 +16,67 @@
     background-position: center;
   }
 
+  &__hero-logo {
+    width: 25rem;
+  }
+
+  &__hero-button {
+    padding: 0.5rem 1rem;
+    margin: 1rem;
+    border-color: black;
+    background-color: #fde203;
+    cursor: pointer;
+    border-radius: 0.5rem;
+
+    &:hover {
+      background-color: #e8e6e6;
+    }
+  }
+
   &__container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 1rem;
+    margin: 2rem;
     background-color: white;
   }
 
   &__services-container {
     background-color: #e8e6e6;
     margin: 0;
+    padding: 2rem;
+  }
+
+  &__services-cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__service-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: white;
+    border-radius: 10px;
     padding: 1rem;
+    margin: 1rem;
+    width: 20rem;
+    height: 20rem;
+    box-shadow: 0 5px 9px -1px rgba(0, 0, 0, 0.25);
+  }
+
+  &__service-icon {
+    width: 5rem;
+  }
+
+  &__service-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
