--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,43 +1,87 @@
+@use "../../styles/partials/variables" as *;
+@use "../../styles//partials/mixins" as *;
 .footer {
-  background-color: #e8e6e6;
-  display: flex;
-  flex-direction: column;
+  background-color: $studcon-grey;
+  color: black;
   font-family: "Roboto", Tahoma, sans-serif;
-  padding-bottom: 2rem;
+  padding: 2rem 1rem;
+  text-align: left;
 
   &__content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 1rem;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__logo {
+    width: 12rem;
+  }
+
+  &__info {
     display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
-    width: 15rem;
-    padding-top: 2rem;
-    padding-left: 2rem;
+    flex-direction: column;
+    gap: 1rem;
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+      gap: 4rem;
+    }
   }
 
   &__contact {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding-left: 2rem;
-    padding-top: 1rem;
   }
 
-  &__social-icons {
+  &__contact-item {
+    font-size: 0.95rem;
+  }
+
+  &__social {
     display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    width: 1.5rem;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+    }
+  }
+
+  &__social-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-size: 0.95rem;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__social-icon {
-    width: 1.5rem;
-    cursor: pointer;
+    width: 1.2rem;
+    margin-right: 0.5rem;
+  }
+
+  &__logo-link {
+    display: inline-block;
+  }
+
+  &__copyright {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 0.85rem;
+    color: black;
   }
 }
