update about section design

--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,9 @@
 //Studcon main colors
 
-$studcon-black: black;
-$studcon-yellow: #fde203;
+$studcon-black: #202020;
+$studcon-ash: #333533;
+$studcon-yellow: #ffee32;
 $studcon-lightyellow: #f9f4c6;
-$studcon-grey: #e8e6e6;
+$studcon-gold: #ffd100;
+$studcon-grey: #d6d6d6;
 $studcon-darkgrey: #b9b9b9;
