--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -16,6 +16,7 @@
     margin: 0 auto;
 
     @media (min-width: 768px) {
+      padding: 1rem;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
@@ -24,6 +25,10 @@
 
   &__logo {
     width: 12rem;
+
+    @media (min-width: 768px) {
+      width: 15rem;
+    }
   }
 
   &__info {
@@ -32,8 +37,7 @@
     gap: 1rem;
 
     @media (min-width: 768px) {
-      flex-direction: row;
-      gap: 4rem;
+      flex-direction: column;
     }
   }
 
