--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,6 +8,12 @@
   align-items: center;
   background-color: $studcon-grey;
 
+  @media (min-width: 768px) {
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
+  }
+
   &__logo {
     display: flex;
     justify-content: center;
@@ -21,6 +27,11 @@
     display: flex;
     gap: 0.5rem;
     margin-bottom: 2rem;
+
+    @media (min-width: 768px) {
+      padding: 1rem;
+      margin-bottom: 0;
+    }
   }
 
   &__button {
