--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -38,7 +38,6 @@
     height: 100%;
     width: 100%;
     padding: 2rem;
-    background: rgba(0, 0, 0, 0.4); // optional dark overlay
     color: white;
   }
 
@@ -55,46 +54,90 @@
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 2rem;
-    color: $studcon-darkgrey;
+    color: $studcon-ash;
   }
 
   &__about-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     gap: 2rem;
 
-    @media (max-width: 768px) {
-      flex-direction: column;
+    @media (min-width: 768px) {
+      flex-direction: row;
+      gap: 8rem;
+    }
+  }
+
+  &__about-design {
+    width: 18.75rem;
+    height: 15.5rem;
+    position: relative;
+    top: -1rem;
+    left: -3rem;
+    border: 5px solid $studcon-yellow;
+
+    @media (min-width: 768px) {
+      margin-left: 4rem;
     }
   }
 
   &__about-image {
-    width: 100%;
-    max-width: 500px;
-    border-radius: 0.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 1rem;
+    left: 1rem;
+    width: 25rem;
     object-fit: cover;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  &__about-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
   }
 
   &__about-text {
     font-size: 1.125rem;
     line-height: 1.6;
-    text-align: left;
-    color: #333;
+    margin-top: 2rem;
+    text-align: center;
+    color: $studcon-ash;
+  }
+
+  &__about-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 10rem;
+    font-family: "Roboto", Tahoma, sans-serif;
+    text-decoration: none;
+    color: black;
+    background-color: $studcon-yellow;
+    font-size: 15px;
+    padding: 0.5rem 1rem;
+    border: solid 2px black;
+    border-radius: 0.5rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $studcon-darkgrey;
+    }
   }
 
   &__services-container {
-    background-color: $studcon-darkgrey;
     padding: 4rem 2rem;
     margin: 0;
   }
 
   &__services-title {
     font-family: "Play", sans-serif;
-    font-size: 2.5rem;
-    color: white;
-    text-align: center;
+    color: $studcon-ash;
+    text-align: left;
     margin-bottom: 3rem;
   }
 
@@ -111,7 +154,7 @@
 
   &__service-card {
     background-color: white;
-    border-radius: 12px;
+    border-radius: 3px;
     padding: 2rem;
     text-align: center;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
@@ -140,6 +183,7 @@
     font-weight: bold;
     margin: 0.5rem 0;
     color: $studcon-black;
+    font-family: "Play", sans-serif;
   }
 
   &__service-text {
@@ -152,30 +196,47 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin: 2rem 0;
   }
 
   &__projects-title {
     text-align: start;
     font-family: "Play", sans-serif;
+    padding-left: 2rem;
+    color: $studcon-ash;
   }
 
-  &__projects-gallery {
+  &__carousel {
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+  }
+
+  @keyframes scroll-carousel {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);
+    }
+  }
+  &__carousel-track {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
+    gap: 1rem;
+    width: max-content;
+    animation: scroll-carousel 30s linear infinite;
+  }
+
+  &__carousel-track:hover {
+    animation-play-state: paused;
   }
 
   &__projects-image {
-    width: 100%;
-    margin-bottom: 1rem;
-    align-self: center;
-    filter: grayscale(0%);
-    transition: filter 0.3s ease;
-
-    &:hover {
-      filter: grayscale(100%);
-    }
+    flex: 0 0 auto;
+    width: 30rem;
+    height: auto;
+    object-fit: cover;
+    border-radius: 3px;
   }
 
   &__contact-container {
@@ -186,5 +247,6 @@
 
   &__contact-title {
     font-family: "Play", sans-serif;
+    color: $studcon-ash;
   }
 }
