--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -5,8 +5,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 600px;
+  max-width: 400px;
   margin: 2rem auto;
+
+  @media (min-width: 1076px) {
+    max-width: 600px;
+  }
 
   &__row {
     display: flex;
@@ -22,7 +26,11 @@
     font-family: "Roboto", Tahoma, sans-serif;
     padding: 0.75rem;
     border: 1px solid #ccc;
-    font-size: 1rem;
+    font-size: 0.75rem;
+
+    @media (min-width: 1076px) {
+      font-size: 1rem;
+    }
   }
 
   &__submit {
