--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -46,6 +46,7 @@
     flex-direction: column;
     gap: 1rem;
     margin: 4rem;
+    padding: 4rem 0;
     background-color: white;
   }
 
@@ -53,7 +54,7 @@
     font-family: "Play", sans-serif;
     font-size: 2.5rem;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-top: 2rem;
     color: $studcon-ash;
   }
 
@@ -71,11 +72,11 @@
   }
 
   &__about-design {
-    width: 19.75rem;
-    height: 15.5rem;
+    width: 17.75rem;
+    height: 14.5rem;
     position: relative;
     top: -1rem;
-    left: -3rem;
+    left: -2rem;
     border: 5px solid $studcon-yellow;
 
     @media (min-width: 1076px) {
@@ -92,7 +93,7 @@
     position: relative;
     top: 1rem;
     left: 1rem;
-    width: 25rem;
+    width: 21rem;
     object-fit: cover;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -115,7 +116,6 @@
   &__about-text {
     font-size: 1.125rem;
     line-height: 1.6;
-    margin-top: 2rem;
     text-align: center;
     color: $studcon-ash;
   }
@@ -140,6 +140,52 @@
     }
   }
 
+  &__video-container {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+  }
+
+  &__secondary-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    z-index: 1;
+  }
+
+  &__video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding: 2rem;
+    background: rgba(0, 0, 0, 0.4);
+  }
+
+  &__video-title {
+    font-family: "Play", sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+  }
+
+  &__video-subtitle {
+    font-size: 1.5rem;
+    margin-top: 1rem;
+  }
+
   &__services-container {
     padding: 4rem 2rem;
     margin: 0;
@@ -156,11 +202,12 @@
   }
 
   &__services-title {
+    font-size: 1.5rem;
     font-family: "Play", sans-serif;
     color: $studcon-ash;
     text-align: left;
     position: relative;
-    top: 1rem;
+    top: 1.25rem;
     left: 1rem;
     background-color: white;
     padding: 0rem 10px;
@@ -222,7 +269,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 2rem 0;
+    margin: 0;
   }
 
   &__projects-background {
@@ -237,59 +284,120 @@
 
   &__projects-title {
     font-family: "Play", sans-serif;
+    font-size: 1.5rem;
     color: $studcon-ash;
     text-align: left;
     position: relative;
-    top: 1rem;
+    top: 1.25rem;
     left: 1rem;
     background-color: white;
     padding: 0rem 10px;
     width: 20rem;
   }
 
-  &__carousel {
-    overflow: hidden;
-    width: 100%;
-    position: relative;
-  }
-
-  @keyframes scroll-carousel {
-    0% {
-      transform: translateX(0);
-    }
-    100% {
-      transform: translateX(-50%);
-    }
-  }
-  &__carousel-track {
+  &__gallery-grid {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     gap: 1rem;
-    width: max-content;
-    animation: scroll-carousel 30s linear infinite;
+    padding: 0 3rem;
   }
 
-  &__carousel-track:hover {
-    animation-play-state: paused;
+  &__gallery-image {
+    width: 100%;
+    margin-bottom: 1rem;
+    align-self: start;
+    transition: filter 0.3s ease;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.02);
+    }
+
+    @media (min-width: 1076px) {
+      width: 25rem;
+    }
   }
 
-  &__projects-image {
-    flex: 0 0 auto;
-    width: 30rem;
-    height: auto;
-    object-fit: cover;
+  &__modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background: rgba(0, 0, 0, 0.85);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__modal-content {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  &__modal-image {
+    max-width: 80vw;
+    max-height: 80vh;
+  }
+
+  &__modal-nav {
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 1rem;
+    transition: 0.2s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
+  &__modal-close {
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    font-size: 2.5rem;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
   }
 
   &__contact-container {
-    background-color: $studcon-lightyellow;
+    background-color: $studcon-darkgrey;
     margin: 0;
-    padding: 2rem;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+  }
+
+  &__title-background {
+    border: $studcon-grey solid 5px;
+    position: relative;
+    width: 15rem;
+    height: 3rem;
+    top: -1rem;
+    left: -1rem;
+    margin-left: 4rem;
   }
 
   &__contact-title {
-    align-self: flex-start;
     font-family: "Play", sans-serif;
+    font-size: 1.5rem;
     color: $studcon-ash;
-    margin-bottom: 2rem;
+    text-align: left;
+    position: relative;
+    top: 1.25rem;
+    left: 1rem;
+    background-color: $studcon-darkgrey;
+    padding: 0rem 10px;
+    width: 15rem;
 
     @media (min-width: 1076px) {
       margin-bottom: 0;
@@ -304,21 +412,32 @@
     gap: 3rem;
 
     @media (min-width: 1076px) {
-      flex-direction: row-reverse;
+      flex-direction: row;
       justify-content: space-evenly;
       gap: 0;
       margin-left: 3rem;
     }
   }
 
-  &__contact-info {
+  &__contact-form {
+    width: 350px;
+
     @media (min-width: 1076px) {
+      width: 400px;
+    }
+  }
+
+  &__contact-info {
+    display: none;
+
+    @media (min-width: 1076px) {
+      display: block;
       align-self: center;
     }
   }
 
   &__contact-background {
-    border: $studcon-darkgrey solid 5px;
+    border: $studcon-grey solid 5px;
     position: relative;
     width: 19rem;
     height: 12rem;
@@ -346,9 +465,5 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 4rem 10px;
     width: 20rem;
-  }
-
-  &__contact-form {
-    margin-top: 2rem;
   }
 }
