update contact form

--- a/src/components/ContactForm/ContactForm.scss
+++ b/src/components/ContactForm/ContactForm.scss
@@ -25,7 +25,7 @@
   textarea {
     font-family: "Roboto", Tahoma, sans-serif;
     padding: 0.75rem;
-    border: 1px solid #ccc;
+    border: 1px solid $studcon-ash;
     font-size: 0.75rem;
 
     @media (min-width: 1076px) {
